[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pynapcat"
version = "0.1.0"
description = "A Python package for NapCat"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["napcat", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    # 测试框架
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "aioresponses>=0.7.6",
    
    # 代码质量
    "black>=24.0",
    "ruff>=0.3.0",
    "mypy>=1.9",
    
    # 性能测试
    "pytest-benchmark>=4.0",
    "pytest-xdist>=3.5",
]

[project.urls]
Homepage = "https://github.com/yourusername/PyNapCat"
Documentation = "https://github.com/yourusername/PyNapCat#readme"
Repository = "https://github.com/yourusername/PyNapCat"
Issues = "https://github.com/yourusername/PyNapCat/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pynapcat"]

[tool.hatch.version]
path = "src/pynapcat/__init__.py"

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py314"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportMissingTypeStubs = true
reportUnknownParameterType = true
reportUnknownArgumentType = true
reportUnknownLambdaType = true
reportUnknownVariableType = true
reportUnknownMemberType = true

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers --cov=pynapcat --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
