[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pynapcat"
dynamic = ["version"]
description = "A Python async framework for NapCat"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [{ name = "Your Name", email = "your.email@example.com" }]
maintainers = [{ name = "Your Name", email = "your.email@example.com" }]
keywords = ["napcat", "asyncio", "typed", "framework"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Framework :: AsyncIO",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0",
  "pytest-benchmark>=4.0",
  "pytest-xdist>=3.5",
  "pytest-mock>=3.12",
  "pytest-timeout>=2.3",
]

[project.urls]
Homepage = "https://github.com/yourusername/PyNapCat"
Documentation = "https://github.com/yourusername/PyNapCat#readme"
Repository = "https://github.com/yourusername/PyNapCat"
Issues = "https://github.com/yourusername/PyNapCat/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pynapcat"]
include = ["src/pynapcat/py.typed"]

[tool.hatch.version]
path = "src/pynapcat/__init__.py"

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "B", "C4", "UP", "ASYNC"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportMissingTypeStubs = "error"
reportUnknownParameterType = "error"
reportUnknownArgumentType = "error"
reportUnknownLambdaType = "error"
reportUnknownVariableType = "error"
reportUnknownMemberType = "error"

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers --cov=pynapcat --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]
